--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/drawer": "^7.5.9",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.9",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0"
+    "react-native-screens": "^4.16.0",
+    "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
